# dash_asimov_template

./: pyproject.toml
poetry_dash1/: __init__.py
