[tool.poetry]
name = "poetry-dash1"
version = "0.1.0"
description = ""
authors = ["ezequiel <contatodevmais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.18.2"
dash-core-components = "^2.0.0"
plotly = "^5.24.1"
pandas = "^2.2.3"
gunicorn = "^23.0.0"
numpy = "^2.2.0"
datetime = "^5.5"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
